Correct spacing errors and remove unnecessary styles

--- a/CSS/organiseddiets.css
+++ b/CSS/organiseddiets.css
@@ -25,10 +25,9 @@ body{
   margin-left:10px;
 
 }
-
-
 #footer{
   background-color:#c4c4c4;
+  font-size:15px;
 }
 .container-diet{
   height:40px;
@@ -52,9 +51,6 @@ body{
 .organised:hover{
   background-color:#e0e0e0;
   cursor:pointer;
-}
-.organised:active{
-  background-color:#e0e0e0;
 }
 .active{
   background-color:#e0e0e0;
